--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ repositories {
 }
 
 dependencies {
-    implementation("org.slf4j:slf4j-simple:1.7.25")
+    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.30'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
     implementation("com.github.ev3dev-lang-java:ev3dev-lang-java:2.5.3")
     implementation group: 'org.glassfish.tyrus', name: 'tyrus-client', version: '1.16'
     implementation group: 'org.glassfish.tyrus', name: 'tyrus-container-grizzly-client', version: '1.16'
