--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,8 @@
 // Project configuration
 brick.pref {
     // Main class //
-    mainClass = "example.programming.HelloWorld"
+    //mainClass = "example.programming.HelloWorld"
+    mainClass = "example.websocket.Ev3Robot"
 
     // Brick connection parameters //
     sshHost = "ev3dev.local"
